added ng skeleton

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,49 @@
 
 <html lang='en'>
 <head>
+    
     <link type="text/css" rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
 </head>
-    <body>
-    <h1>CRUSH connected</h1>
-    </body>
+<body ng-app='mainApp' ng-controller='mainCtrl'>
+    
+    
+    
+    <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">CRUSH connected</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a ui-sref="home">Home <span class="sr-only">(current)</span></a></li>
+        <li><a ui-sref="login">Login</a></li>
+        <li><a ui-sref="register">Register</a></li>
+        <li><a ui-sref="profile">Profile</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+    
+    <ui-view></ui-view>
+    
+    <script src='jquery/dist/jquery.js'></script>
+    <script src='bootstrap/dist/js/bootstrap.js'></script>
+    <script src='angular/angular.js'></script>
+    <script src='angular-ui-router/release/angular-ui-router.js'></script>
+    <script src='app.js'></script>
+    <script src="controllers/main.ctrl.js"></script>
+    <script src="controllers/home.ctrl.js"></script>
+    <script src="controllers/profile.ctrl.js"></script>
+    <script src="controllers/register.ctrl.js"></script>
+    <script src="controllers/login.ctrl.js"></script>
+</body>
 </html>
