--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     
     <link type="text/css" rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
-    <link rel="icon" type='image/x-icon' href='crushfavicon.ico'>
+    <link rel="icon" type='image/x-icon' href="crushfavicon.ico">
 </head>
 <body ng-app='mainApp' ng-controller='mainCtrl'>
     
