work on authentication

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">CRUSH connected</a>
+      <a class="navbar-brand" href="#">
+          CRUSH connected
+        <!--<i src="images/logo4.png" width="50px"></i>-->
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
