refactor controllerAs, auth, profile, register

--- a/client/views/partials/profile.html
+++ b/client/views/partials/profile.html
@@ -1,4 +1,4 @@
-<div class='container' ng-controller='profileCtrl'>
-    {{title}}
-    {{user.name}}
+<div class='container'>
+    {{vm.title}}
+    {{vm.user.name}}
 </div>
