--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,5 +50,7 @@
     <script src="controllers/profile.ctrl.js"></script>
     <script src="controllers/register.ctrl.js"></script>
     <script src="controllers/login.ctrl.js"></script>
+    <script src="common/services/authentication.service.js"></script>
+    <script src="common/services/data.service.js"></script>
 </body>
 </html>
